refactor: add dockerfile to storage service, rename app in server/dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -18,13 +18,13 @@ COPY ./server/internal ./internal
 
 RUN go mod download
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o webserver ./cmd/main/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -o chat_service ./cmd/main/main.go
 
 FROM alpine:3.19.0 AS runner
 
 WORKDIR /root/
 
-COPY --from=builder /app/webserver .
+COPY --from=builder /app/chat_service .
 COPY --from=builder /app/.env .
 
-CMD ["./webserver"]
+CMD ["./chat_service"]
