--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
   webserver:
     container_name: websocket-chat-server
     build:
-      dockerfile: ./server/Dockerfile
+      dockerfile: ./services/server/Dockerfile
     ports:
       - "8080:8080"
     depends_on:
@@ -18,7 +18,7 @@ services:
 
   storage:
     build:
-      dockerfile: ./storage/Dockerfile
+      dockerfile: ./services/storage/Dockerfile
     depends_on:
       - db
       - redis
