--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,9 @@
 version: "3.8"
 
 services:
-  webserver:
-    container_name: websocket-chat-server
+  chat:
     build:
-      dockerfile: ./services/server/Dockerfile
+      dockerfile: ./services/chat/Dockerfile
     ports:
       - "8080:8080"
     depends_on:
@@ -28,7 +27,6 @@ services:
       - zookeeper
 
   db:
-    container_name: websocket-chat-db
     image: postgres:16-alpine
     restart: always
     environment:
